--- a/DCW Website/style.css
+++ b/DCW Website/style.css
@@ -24,6 +24,22 @@ body {
 	border: 5px solid lightgray;
 	
 }
+
+@media screen and (min-width: 2500px) {
+	.cabecalho h1 {
+	margin: 0px;
+	padding: 0px;
+	color: lightgray;
+	position: absolute;
+	top: calc(30% + 180px);
+	left: calc(50% - 180px);
+	height: 35px;
+	width: 370px;
+	border: 5px solid lightgray;
+	
+}
+	
+}
 .cabecalho img {
 	width: 100%;
 	height: 500px;
