--- a/DCW Website/main1.css
+++ b/DCW Website/main1.css
@@ -17,6 +17,13 @@ form {
     border-radius: 8px;
 }
 
+div {
+    text-align: center;
+    padding: 8px;
+    color: black;
+    font-size: 20px;
+}
+
 h2 {
     color: white;
     text-align: center;
@@ -57,7 +64,7 @@ input {
 }
 
 .cabecalho {
-    width: 100%
+    width: 100%;
     margin: 0px;
     padding: 0px;
     height: 20%;
@@ -68,4 +75,40 @@ input {
     margin: 0px;
     padding: 0px;
     color: lightgray;
+    display: inline-block;
+    width: 100%;
+}
+
+
+nav {
+    width: 100%;
+    z-index: 10;
+    color: white;
+}
+
+
+.menu ul {
+    padding:0px;
+    margin:0px;
+    list-style:none;
+    height: 40px;
+    text-align: left;
+}
+
+.menu ul li {
+    display: inline-block;
+    color: lightgray;
+}
+
+.menu ul li a {
+    display: inline-block;
+    border-bottom: 3px solid #283A3A;
+    color: lightgray;
+    padding: 0px 10px;
+    text-decoration: none;
+    line-height: 37px;
+}
+
+#vhs {
+    width: 60%;
 }
