--- a/DCW Website/main2.css
+++ b/DCW Website/main2.css
@@ -70,6 +70,42 @@ div {
     margin: 0px;
     padding: 0px;
     color: lightgray;
+    display: inline-block;
+    width: 100%;
+}
+
+
+nav {
+    width: 100%;
+    z-index: 10;
+    color: white;
+}
+
+
+.menu ul {
+    padding:0px;
+    margin:0px;
+    list-style:none;
+    height: 40px;
+    text-align: left;
+}
+
+.menu ul li {
+    display: inline-block;
+    color: lightgray;
+}
+
+.menu ul li a {
+    display: inline-block;
+    border-bottom: 3px solid #283A3A;
+    color: lightgray;
+    padding: 0px 10px;
+    text-decoration: none;
+    line-height: 37px;
+}
+
+#vhs {
+    width: 60%;
 }
 
 .input {
