--- a/DCW Website/main4.css
+++ b/DCW Website/main4.css
@@ -58,7 +58,7 @@ div {
 }
 
 .cabecalho {
-    width: 100%
+    width: 100%;
     margin: 0px;
     padding: 0px;
     height: 20%;
@@ -69,4 +69,40 @@ div {
     margin: 0px;
     padding: 0px;
     color: lightgray;
+    display: inline-block;
+    width: 100%;
+}
+
+
+nav {
+    width: 100%;
+    z-index: 10;
+    color: white;
+}
+
+
+.menu ul {
+    padding:0px;
+    margin:0px;
+    list-style:none;
+    height: 40px;
+    text-align: left;
+}
+
+.menu ul li {
+    display: inline-block;
+    color: lightgray;
+}
+
+.menu ul li a {
+    display: inline-block;
+    border-bottom: 3px solid #283A3A;
+    color: lightgray;
+    padding: 0px 10px;
+    text-decoration: none;
+    line-height: 37px;
+}
+
+#vhs {
+    width: 60%;
 }
