--- a/styles/home.css
+++ b/styles/home.css
@@ -21,6 +21,7 @@ body {
 .headerImg {
     position: relative;
     display: inline-block;
+    max-width: 1100px;
 }
 
 .header h1 {
@@ -86,6 +87,7 @@ li a {
     width: 800px;
     height: 450px;
     margin-bottom: 3%;
+    max-width: 1100px;
 }
 
 .guests {
@@ -111,6 +113,7 @@ li a {
     width: 800px;
     height: 450px;
     margin-bottom: 3%;
+    max-width: 1100px;
 }
 
 footer {
