--- a/styles/imoveis.css
+++ b/styles/imoveis.css
@@ -80,7 +80,7 @@ li a {
 
 .black-block {
     width: 300px;
-    height: 281px;
+    height: 291.39px;
     background: #0E0E0E;
     position: relative;
     padding-right: 85%;
@@ -98,7 +98,7 @@ li a {
 
 .grid ul{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 24px;
     list-style: none;
     background: #FFFFFF;
@@ -108,14 +108,15 @@ li a {
 .grid ul li{
     background: #0e0e0e;
     padding: 24px;
-    border-radius: 8px;
     position: relative;
+    width: 330px;
+    height: 291.39px;
 }
 
 .grid ul li strong {
     display: block;
-    margin-top: 10px;
-    margin-bottom: 16px;
+    margin-top: 8px;
+    margin-bottom: 10px;
     color: #ffff;
     font-size: 20px;
 }
@@ -123,7 +124,7 @@ li a {
 .grid ul li p {
     color: #ffff;
     line-height: 21px;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 .grid ul li p + strong{
