--- a/styles/imoveis.css
+++ b/styles/imoveis.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    margin-top: -1%;
+    margin-top: 0%;
     padding: 0;
     font: 400 14px sans-serif;
     background: #0E0E0E;
@@ -29,12 +29,22 @@ body {
 .headerMenu {
     display: flex;
     max-width: 1100px;
-    height: 60px;
+    height: 80px;
     background: #000000;
     align-items: center;
     color: #FFFFFF;
     width: 100%;
 }
+
+input[type=submit]{
+    background-color: #000000;/* Green */
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    font-size: 20px;
+  }
 
 .menu nav ul {
     list-style-type: none;
@@ -94,6 +104,7 @@ li a {
     margin: 32px auto;
     background: #FFFFFF;
     margin-top: 2%;
+    text-align: center;
 }
 
 .grid ul{
@@ -124,7 +135,7 @@ li a {
 .grid ul li p {
     color: #ffff;
     line-height: 21px;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .grid ul li p + strong{
@@ -136,7 +147,7 @@ li a {
 .white-block {
     margin-top: -1.6%;
     width: 1100px;
-    height: 900px;
+    height: 1000px;
     background: #FFFFFF;
 }
 
