--- a/styles/stylesheet2.css
+++ b/styles/stylesheet2.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    padding: 0;
     font: 400 14px sans-serif;
     background: #0E0E0E;
     -webkit-font-smoothing: antialiased;
@@ -51,45 +52,18 @@ li a {
     text-decoration: none;
 }
 
-.b1 {
-    background: #0E0E0E;
-    border: 3px solid #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 45px;
-    color: #FFFFFF;
-    font-weight: 500;   
-    font-size: 18px;
-    line-height: 40px;
-    width: 300px;
-    align-items: center;
-    text-align: center;
+.white-block {
+
+    width: 1100px;
+    height: 1000px;
+    background: #FFFFFF;
 }
 
-#b1{
-    position: absolute;
-    top: 70%;
-    left: 27%;
-}
-
-.b1 a {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
-.black-block {
-    position: absolute;
-    width: 644px;
-    height: 508px;
-    left: 430px;
-    top: 120px;
-
-    background: #0E0E0E;
+.black-block{
+    max-width: 1030px;
 }
 
 .black-block h2{
-    color: #FFFFFF;
-    padding-top: 18px;
-    padding-bottom: 20px;
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
@@ -97,20 +71,33 @@ li a {
     line-height: 33px;
 }
 
-.black-block label {
-    width: 292px;
-    height: 50px;
-    
+.black-block ul{
+    list-style-type: none;
+    text-align: center;
+}
 
+.black-block ul h3{
     font-family: Roboto;
     font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 28px;
-    
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 20px;   
+}
 
-    color: #FFFFFF;
-    
+
+
+.ilset{
+    padding: .3333333333rem;
+}
+
+.ilset span{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+
 }
 
 #imp {
@@ -120,7 +107,39 @@ li a {
     line-height: 40px;
     font-size: 20px;
     text-align: center;
-
     background: #FFFFFF;
     border-radius: 45px;
 }
+
+.detalheTitulo{
+    display: inline-block;
+    width: 50%;
+}
+
+.detalheTitulo2{
+    display: inline-block;
+    width: 50%;
+}
+
+.img-block{
+    background-color: #0E0E0E;
+    width: 1030px;
+    height: 334px;
+    
+    list-style-type: none;
+}
+
+.black-list{
+    background-color: #0E0E0E;
+    color: #FFFF;
+}
+
+input[type=submit] {
+    background-color: #000000;/* Green */
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    font-size: 20px;
+  }
